@@ -55,6 +55,8 @@ class ModelLinkGraphCells;
 class ModelLinkGraphNode;
 class StrandRef;
 
+template <int> class FacetPairing;
+
 /**
  * A reference to an outgoing edge from a node of a model graph for a
  * knot or link.
@@ -1258,6 +1260,72 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
          * number generation.
          */
         void randomise();
+
+        /**
+         * Generates all possible local embeddings of the given 4-valent graph
+         * into some closed orientable surface.
+         *
+         * The input 4-valent graph (which does _not_ contain any embedding
+         * data) should be presented as a closed 3-dimensional facet pairing
+         * (since these can be generated efficiently using Regina).
+         *
+         * This routine will, up to canonical relabelling, generate all
+         * local embeddings of the given graph into a closed orientable surface
+         * (i.e., all ModelLinkGraph objects corresponding to the input graph).
+         *
+         * The graphs that are generated will be labelled canonically as
+         * described by canonical().  In particular, the argument
+         * \a allowReflection will be passed through to canonical().
+         *
+         * This routine is a work in progress.  Currently it is _very_
+         * inefficient, and moreover it may generate the same graph many
+         * times over (so typically the output list would need to be sorted
+         * and stripped, or put into a set or map).  This is something that
+         * will be improved over time if/when it becomes important to do so.
+         *
+         * If \a allowReflection is \c false, then if we run all possible facet
+         * pairings through this routine and strip out duplicate outputs, the
+         * combined results should be precisely those graphs described by OEIS
+         * sequence A292206.  If \a allowReflection is \c true, then (once we
+         * reach three nodes or more) the output set should be smaller.
+         *
+         * For each graph that is generated, this routine will call \a action
+         * (which must be a function or some other callable object).
+         *
+         * - The first argument passed to \a action will be the graph that was
+         *   generated (of type ModelLinkGraph).  This will be passed as an
+         *   rvalue; a typical action could (for example) take it by const
+         *   reference and query it, or take it by value and modify it, or take
+         *   it by rvalue reference and move it into more permanent storage.
+         *
+         * - If there are any additional arguments supplied in the list \a args,
+         *   then these will be passed as subsequent arguments to \a action.
+         *
+         * - \a action must return \c void.
+         *
+         * \apinotfinal
+         *
+         * \pre The given facet pairing is connected, and is closed (i.e., has
+         * no unmatched facets).
+         *
+         * \python This function is available in Python, and the \a action
+         * argument may be a pure Python function.  However, its form is more
+         * restricted: the argument \a args is removed, so you simply call it
+         * as `generateAllEmbeddings(pairing, allowReflection, action)`.
+         * Moreover, \a action must take exactly one argument (the graph).
+         *
+         * \param pairing the 4-valent graph for which we wish to produce
+         * local embeddings.
+         * \param allowReflection \c true if we consider a reflection of the
+         * surface in which the graph embeds to produce the same embedding.
+         * \param action a function (or other callable object) to call
+         * for each graph that is generated.
+         * \param args any additional arguments that should be passed to
+         * \a action, following the initial graph argument.
+         */
+        template <typename Action, typename... Args>
+        static void generateAllEmbeddings(const FacetPairing<3>& pairing,
+            bool allowReflection, Action&& action, Args&&... args);
 
         /**
          * Outputs this graph in a variant of the ASCII text format used
